# hexit

./: .gitignore  .travis.yml  Cargo.toml  Justfile  LICENCE  README.md  build.rs
completions/: hexit.bash  hexit.fish  hexit.zsh
examples/: bgp.hexit  dns-request.hexit  gzip-data.hexit  gzip.hexit  icmp-ping.hexit  png-image.hexit  png.hexit  tls-client-hello.hexit
examples/outputs/: dns-request.txt  gzip-data.txt  icmp-ping.txt  png-image.txt  tls-client-hello.txt
fuzz/: Cargo.toml  Justfile
fuzz/fuzz_targets/: fuzz_hexit.rs
hexit-lang/: Cargo.toml
hexit-lang/src/: ast.rs  constants.rs  eval.rs  lex.rs  lib.rs  parse.rs  pos.rs  read.rs  tokens.rs
hexit-lang/tests/: integration_tests.rs
hexit-lang/tests/line/: bit_form_tests.rs  bitwise_function_tests.rs  byte_tests.rs  constant_tests.rs  decimal_form_tests.rs  float_form_tests.rs  form_tests.rs  function_tests.rs  mod.rs  repeat_tests.rs  string_tests.rs
src/: colours.rs  console.rs  input.rs  main.rs  options.rs  style.rs  usage.txt  verify.rs
xtests/: error-handling.toml  examples.toml  halp.toml  invocation-errors.toml  list-constants.toml  logging.toml  running.toml  verify.toml
xtests/erroneous-inputs/: README.md  invalid-form.hexit  invalid-function-name.hexit  invalid-repeat-amount.hexit  invalid-string-escape.hexit  stray-things.hexit  unclosed-function.hexit  unterminated-form.hexit  unterminated-string.hexit
xtests/outputs/: bgp_constants.txt  invalid-form.txt  invalid-function-name.txt  invalid-repeat-amount.txt  invalid-string-escape.txt  no-constants.txt  stray-things.txt  unclosed-function.txt  unterminated-form.txt  unterminated-string.txt
