[package]
name = "hexit"
description = "hex bytes emitter"
homepage = "https://hexit.binarystar.systems/"

authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"
license = "CC0-1.0/MIT"
publish = false
readme = "README.md"
version = "0.1.0-pre"

exclude = [
    "/completions/*", "/examples/*", "/man/*", "/xtests/*",
    "/*.png", "/Justfile", "/.rustfmt.toml",
]


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"


[workspace]
members = [
  "hexit-lang",
]


[[bin]]
name = "hexit"
path = "src/main.rs"


[dependencies]
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"
log = "0.4"

[dependencies.hexit-lang]
path = "hexit-lang"

[build-dependencies]
humantime = "2.0"

[dev-dependencies]
pretty_assertions = "0.6"
